@@ -1,5 +1,9 @@
 # This file gets appended to WebCore.exp, only for 64-bit architectures.
 
+__ZN3JSC16RuntimeObjectImp6s_infoE
 __ZN3JSC8Bindings10RootObjectD1Ev
-__ZN7WebCore6String8fromUTF8EPKcm
+__ZN3JSC8Bindings8Instance19createRuntimeObjectEPNS_9ExecStateE
+__ZN3JSC8Bindings8InstanceC2EN3WTF10PassRefPtrINS0_10RootObjectEEE
+__ZN3JSC8Bindings8InstanceD2Ev
 __ZN7WebCore16ScriptController9isEnabledEv
+__ZN7WebCore6String8fromUTF8EPKcm
