@@ -1,3 +1,13 @@
+2009-01-21  Anders Carlsson  <andersca@apple.com>
+
+        Reviewed by Sam Weinig.
+
+        * WebCore.LP64.exp:
+        Add some bridge related symbols.
+        
+        * WebCore.xcodeproj/project.pbxproj:
+        Make runtime_object.h a private header.
+
 2009-01-20  David Levin  <levin@chromium.org>
 
         Reviewed by Alexey Proskuryakov.
